--- a/HTML COURSE/html_biginner.html
+++ b/HTML COURSE/html_biginner.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html basic tags</title>
 </head>
 <body>
-    <h1>Paragraph tag used here.</h1>
+    <h1 title="i am a header">Paragraph tag used here.</h1>
+    <p title="paragraph tag">from today 
     </br><!-- break tag-->
-    <p>from today i suryakanta sahu will start my coding journey</p>
+        i suryakanta sahu will start my coding journey</p>
     
-    <h2></h2>
+    <h2>ANCHOR TAG</h2>
+    <a title="i am an anchor tag" href="anchor_tag.html">click here</a></br>
+    <img src="/image/bird image.jpg" height="100" width="100" alt="blue bird">
+    <img src="image/bird image.jpg" height="100" width="100" alt="blue bird">
     
 </body>
 </html>
